testsuite/tests/parser/should_fail/T20609c.stderr

T20609c.hs:8:13: error: [GHC-58481]
    Parse error on input ‘forall’. Expected one of '::'
